# Xdcheckin

./: .gitmodules  CHANGELOG  CHANGELOG.md  CNAME  README.md  config.json  main.py  pyproject.toml  xdcheckin.py
.github/actions/: get_version.yml
.github/actions/build-android/: action.yml
.github/actions/check-version/: action.yml
.github/actions/get_version/: action.yml
.github/workflows/: build-android.yml  build-fedora.yml  build-ubuntu.yml  build-wheel.yml  build-windows.yml  build.yml  build_ci.yml  build_package.yml  check-version.yml  force-build-release.yml  force-release.yml  get_version.yml  github-pages.yml  publish-pypi.yml  release.yml  test.yml
.github/workflows/util/: get_version.yml
chaoxing/: __init__.py  chaoxing.js  chaoxing.py  locations.js  locations.py
src/backend/: main.py  server.py
src/backend/static/: classrooms.js
src/backend/static/lib/jsqrcode/: llqrcode.js
src/backend/templates/: blank.html  index.html  player.html
src/xdcheckin/: __init__.py  __main__.py  app.py
src/xdcheckin/Xdcheckin/: README.md  main.py
src/xdcheckin/Xdcheckin/static/Xdclassroom/: CNAME  README.md  classrooms.js  player.html
src/xdcheckin/Xdcheckin/static/Xdclassroom/lib/jsqrcode/: llqrcode.js
src/xdcheckin/Xdcheckin/static/Xdclassroom/lib/long-press-event/: long-press-event.min.js
src/xdcheckin/Xdcheckin/static/Xdclassroom/lib/xdcheckin/: locations.js
src/xdcheckin/Xdcheckin/templates/: index.html  player.html
src/xdcheckin/Xdcheckin/xdcheckin_py/: README.md
src/xdcheckin/Xdcheckin/xdcheckin_py/chaoxing/: locations.py
src/xdcheckin/app/: app.py
src/xdcheckin/app/resources/: xdcheckin.icns
src/xdcheckin/core/: chaoxing.py  classrooms.py  locations.py  newesxidian.py  xidian.py
src/xdcheckin/server/: server.py
src/xdcheckin/server/static/: activity.js  classroom.js  curriculum.js  g_classroom_urls.js  global.js  location.js  login.js  misc.js  player.js  polyfill.js  style.css  util.js
src/xdcheckin/server/templates/: index.html  player.html
src/xdcheckin/util/: captcha.py  chaoxing_captcha.py  encryption.py  image.py  network.py  session.py  time.py  types.py  version.py
static/: classrooms.js
static/lib/: classrooms.js
templates/: index.html  player.html
utils/: chaoxing.py
